# clipboard-manager

./: ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clipboard-manager.desktop  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
assets/: style.css
config/: default.toml
packaging/: clipboard-manager-autostart.desktop  clipboard-manager.1  clipboard-manager.desktop
packaging/debian/: postinst  postrm  prerm
src/: app.rs  config.rs  main.rs  tray.rs
src/clipboard/: entry.rs  mod.rs  monitor.rs
src/hotkey/: evdev.rs  mod.rs  wayland.rs  x11.rs
src/paste/: mod.rs  x11.rs
src/platform/: mod.rs  wayland.rs  x11.rs
src/store/: engine.rs  memory.rs  mod.rs  persistent.rs
src/ui/: item_row.rs  mod.rs  popup.rs  style.rs
