[package]
name = "clipboard-manager"
version = "1.0.3"
edition = "2021"
description = "Clipboard history manager for Ubuntu — press Ctrl+Alt+C to open clipboard history"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sheheemmulakkal/clipboard-manager"


[dependencies]
x11rb = { version = "0.13", features = ["xtest"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = "0.4"
ksni = { version = "0.3", features = ["blocking"] }
dirs = "5"
ashpd = "0.9"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
futures-util = "0.3"
evdev = "0.12"


[dependencies.gtk4]
version = "0.9"
optional = true


[dependencies.glib]
version = "0.20"
optional = true


[dependencies.gdk4]
version = "0.9"
optional = true


[dependencies.gdk4-x11]
version = "0.9"
optional = true


[dependencies.rusqlite]
version = "0.31"
optional = true
features = ["bundled"]


[features]
default = ["ui"]
ui = ["gtk4", "glib", "gdk4", "gdk4-x11"]
persist = ["rusqlite"]


# Optimize release builds for size
[profile.release]
opt-level = "z"       # optimize for binary size
lto = true            # link-time optimization
codegen-units = 1     # better optimization
strip = true          # strip debug symbols


[package.metadata.deb]
maintainer = "sheheemmulakkal <sheheemmulakkal@users.noreply.github.com>"
copyright = "2025, sheheemmulakkal"
license-file = ["LICENSE", "0"]
extended-description = """\
Clipboard Manager runs silently in the background and captures your \
clipboard history. Press Ctrl+Alt+C at any time to see a popup list of \
your recent clipboard items and paste any of them into the currently \
focused window. Similar to the Windows Win+V experience. Requires an \
X11 session (select Ubuntu on Xorg at login).\
"""
depends = "$auto, libgtk-4-1, libglib2.0-0"
section = "utils"
priority = "optional"
assets = [
  # The compiled binary → /usr/bin/
  ["target/release/clipboard-manager", "usr/bin/", "755"],
  # App launcher (shows in GNOME app drawer)
  ["packaging/clipboard-manager.desktop", "usr/share/applications/", "644"],
  # Autostart entry (starts on login for all users)
  ["packaging/clipboard-manager-autostart.desktop", "etc/xdg/autostart/", "644"],
  # Man page
  ["packaging/clipboard-manager.1", "usr/share/man/man1/", "644"],
  # Default config (installed as example, not overwritten on upgrade)
  ["config/default.toml", "usr/share/doc/clipboard-manager/config.example.toml", "644"],
  # README
  ["README.md", "usr/share/doc/clipboard-manager/README", "644"],
]
maintainer-scripts = "packaging/debian"

# conf-files lists files that dpkg will NOT overwrite on upgrade
# (we don't list user's ~/.config here — that's not our job)
